--- a/css/5_block.css
+++ b/css/5_block.css
@@ -202,6 +202,8 @@
       border-color: var(--surface-input);
     }
 
+    & textarea { resize: vertical; }
+
 
     &:has(input.err) .feedback { color: var(--color-err); }
     &:has(input.suc) .feedback { color: var(--color-suc); }
