--- a/css/2_theme-default.css
+++ b/css/2_theme-default.css
@@ -86,6 +86,12 @@
     );
     --color-err: var(--color-dgr);
 
+    /* === HR === */
+    --color-hr: light-dark(
+      color-mix(in oklch, var(--color-pri), var(--gry-4) 70%),
+      color-mix(in oklch, var(--color-pri), var(--gry-6) 70%)
+    );
+
     /* === TEXT === */
     --text-color: light-dark(var(--gry-9), var(--gry-1));
     --text-muted: light-dark(var(--gry-7), var(--gry-3));
