--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <header id="header" class="flex:split-row" style="grid-area: 1/1/2/4;">
-  <div>
+  <div class="flex:cluster gap:xs align:center">
     <!-- Hamburger - mobile only -->
     <button class="icon-btn mobile" popovertarget="nav-drawer" aria-label="Open menu">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 5h16"/><path d="M4 12h16"/><path d="M4 19h16"/></svg>
