--- a/css/6_exception.css
+++ b/css/6_exception.css
@@ -225,7 +225,7 @@
       padding: 3px;
       gap: 2px;
       & [class~="tab"], & [class*="tab:"] {
-        padding: var(--space-xxs, 0.25rem) var(--space-sm);
+        padding: 0.2rem var(--space-sm);
         font-size: var(--text-xs);
       }
     }
