--- a/partials/aside.html
+++ b/partials/aside.html
@@ -13,9 +13,17 @@
           data-class:tab="$prst_theme !== './css/2_theme-default.css'"
           data-on:click="$prst_theme = './css/2_theme-default.css'">Default</button>
         <button 
+          data-class:tab:active="$prst_theme === './css/2_theme-sahara.css'"
+          data-class:tab="$prst_theme !== './css/2_theme-sahara.css'"
+          data-on:click="$prst_theme = './css/2_theme-sahara.css'">Sahara</button>
+        <button 
           data-class:tab:active="$prst_theme === './css/2_theme-cyber.css'"
           data-class:tab="$prst_theme !== './css/2_theme-cyber.css'"
           data-on:click="$prst_theme = './css/2_theme-cyber.css'">Cyber</button>
+        <button 
+          data-class:tab:active="$prst_theme === './css/2_theme-tokyo.css'"
+          data-class:tab="$prst_theme !== './css/2_theme-tokyo.css'"
+          data-on:click="$prst_theme = './css/2_theme-tokyo.css'">Tokyo</button>
       </div>
     </section>
 
