--- a/partials/aside.html
+++ b/partials/aside.html
@@ -7,7 +7,7 @@
 
     <section class="flex:stack gap:sm">
       <h3 class="text:sm">Theme</h3>
-      <div class="tabs:pri-sm-full">
+      <div class="tabs:pri-sm full">
         <button 
           data-class:tab:active="$prst_theme === './css/2_theme-default.css'"
           data-class:tab="$prst_theme !== './css/2_theme-default.css'"
@@ -29,7 +29,7 @@
 
     <section class="flex:stack gap:sm">
       <h3 class="text:sm">Mode</h3>
-      <div class="tabs:pri-sm-full">
+      <div class="tabs:pri-sm full">
         <button 
           data-class:tab:active="$prst_mode === 'light'"
           data-class:tab="$prst_mode !== 'light'"
